--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card {
+    @apply bg-white rounded overflow-hidden shadow-md relative;
+}
+
+.badge {
+    @apply bg-gray-100 text-gray-400 uppercase font-bold rounded-full p-2 text-xs absolute top-0 ml-2 mt-2;
+}
+
+.btn {
+    @apply uppercase text-xs rounded-full py-2 px-3 font-bold cursor-pointer tracking-wider;
+}
